fixed nav modal bug
-above 1024 wide, would be offcenter towards the right

--- a/css/index.css
+++ b/css/index.css
@@ -31,6 +31,8 @@ body {
   height: 100vh;
   width: 100vw;
   position: fixed;
+  top: 0;
+  left: 0;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
