--- a/less/nav.less
+++ b/less/nav.less
@@ -25,6 +25,8 @@
   height: 100vh;
   width: 100vw;
   position: fixed;
+  top: 0;
+  left: 0;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
